20 max images. Fixed slider on iOS. Second btn for saving gallery"

--- a/public/css/glp-public.css
+++ b/public/css/glp-public.css
@@ -954,7 +954,7 @@ body {
     margin-top: 10px;
     /* see pg-container */
     max-width: 800px;
-    min-width: 50%;
+    min-width: 100%;
     padding: 5px;
     background-color: #f1f1f1;
 }
@@ -1026,4 +1026,8 @@ body {
 
 .modal-header .btn-close {
     display: none;
+}
+
+.modal-header .modal-download {
+    display: block !important;
 }
